--- a/UnitTesting-Exercise/DatabaseExtended.Tests/DatabaseExtended.Tests.csproj
+++ b/UnitTesting-Exercise/DatabaseExtended.Tests/DatabaseExtended.Tests.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DatabaseExtended\DatabaseExtended.csproj" />
+    <ProjectReference Include="..\Database\Database.csproj" />
+  </ItemGroup>
+
 </Project>
